# swig_for_py3

./: CMakeLists.txt  README.md  family.i  run.sh
lib/: child.cpp  child.hpp  parent.cpp  parent.hpp
py_test/: CMakeLists.txt  test.py
